# masque-rs

./: Cargo.toml  Dockerfile  Dockerfile.e2e  README.md  docker-compose.e2e.yml
docs/: design.md
scripts/: e2e-test.sh  gen-certs.sh
src/: address_pool.rs  config.rs  connection.rs  datagram.rs  error.rs  ip_packet.rs  lib.rs  main.rs  policy.rs  routing.rs  server.rs  tun.rs  uri.rs  varint.rs
src/capsule/: decoder.rs  encoder.rs  mod.rs
src/tunnel/: ip.rs  mod.rs  udp.rs
tests/e2e/: echo-server.py  masque-e2e.toml  server-entrypoint.sh
tests/e2e/masque-e2e/: Cargo.toml
tests/e2e/masque-e2e/src/: main.rs
