[workspace]
members = [".", "tests/e2e/masque-e2e"]
resolver = "3"

[package]
name = "masque"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
ipnet = "2"
quiche = "0.26"
ring = "0.17"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tun-rs = { version = "2", features = ["async_tokio"] }
